# ble-tag-alarm

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
src/: CMakeLists.txt  Kconfig.projbuild  main.c
